Archive2/8b/684032987b7331/output
main.cpp:3:40: error: variable or field 'ipmc_bier_remove_encap_leaf_from_list' declared void
 ipmc_bier_remove_encap_leaf_from_list( ipv4mc_bier_st *bier_node,
                                        ^
main.cpp:3:40: error: 'ipv4mc_bier_st' was not declared in this scope
main.cpp:3:56: error: 'bier_node' was not declared in this scope
 ipmc_bier_remove_encap_leaf_from_list( ipv4mc_bier_st *bier_node,
                                                        ^
main.cpp:4:40: error: 'ipv4mc_encap_leaf_st' was not declared in this scope
                                        ipv4mc_encap_leaf_st *encap_leaf)
                                        ^
main.cpp:4:62: error: 'encap_leaf' was not declared in this scope
                                        ipv4mc_encap_leaf_st *encap_leaf)
                                                              ^
